updated career page

--- a/src/components/PageFragments/ExperiencePage/experience.module.less
+++ b/src/components/PageFragments/ExperiencePage/experience.module.less
@@ -55,7 +55,7 @@
     content: "";
     top: 0;
     bottom: 0;
-    left: 303px;
+    left: 169px;
     right: auto;
     height: 100%;
     width: 3px;
@@ -82,7 +82,7 @@
 }
 
 .vtimelineContent {
-  margin-left: 350px;
+  margin-left: 205px;
   background: #fff;
   border: 1px solid #e6e6e6;
   padding: 15px;
@@ -134,7 +134,7 @@
   border-radius: 50%;
   float: left;
   z-index: 99;
-  margin-left: 279px;
+  margin-left: 145px;
   text-align: center;
 
   i {
@@ -148,8 +148,8 @@
 }
 
 .vtimelineDate {
-  width: 260px;
-  text-align: right;
+  width: 135px;
+  text-align: left;
   position: absolute;
   left: 0;
   top: 10px;
@@ -158,7 +158,7 @@
   @media screen and (max-width: 999px) {
     left: 65px;
     text-align: start;
-    width: 200px;
+    width: 190px;
   }
 }
 
@@ -213,10 +213,11 @@
 .projectImage {
   float: left;
   img {
-    height: auto;
+    height: 200px;
     width: auto;
+    padding: 15px;
     @media screen and (max-width: 999px) {
-      height: 250px;
+      height: 205px;
     }
   }
 }
@@ -225,7 +226,7 @@
   /*   position: absolute;
   top: 50%;
   transform: translateY(-50%); */
-  margin-left: 300px;
+  margin-left: 200px;
   padding: 15px;
 
   h3 {
